# pomodoro-backend

./: Dockerfile  Makefile  alembic.ini  compose.yaml  dependecy.py  exception.py  main.py  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 18649f544a1c_access_token.py  3441aa1b1fc2_init.py  47c81d9f1b5a_user_id_in_tasks.py  52b10ca9c115_user_init.py  a2b0169df528_access_token_nullable.py
cache/: __init__.py  accessor.py
database/: __init__.py  accessor.py  database.py  models.py
handlers/: __init__.py  auth.py  ping.py  tasks.py  user.py
models/: __init__.py  tasks.py  user.py
repository/: __init__.py  cache_task.py  task.py  user.py
schema/: __init__.py  task.py  user.py
service/: __init__.py  auth.py  task.py  user.py
